--- a/app/index.html
+++ b/app/index.html
@@ -1,79 +1,72 @@
-<!doctype html>
+﻿<!doctype html>
 <html class="no-js" ng-app>
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title translate="APP_TITLE"></title>
-<meta name="description" content="">
-<meta name="viewport" content="width=device-width">
-<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-<!-- build:css(.) styles/vendor.css -->
-<!-- bower:css -->
-<link rel="stylesheet"
-	href="bower_components/bootstrap/dist/css/bootstrap.css" />
-<!-- endbower -->
-<!-- endbuild -->
-<!-- build:css(.tmp) styles/main.css -->
-<link rel="stylesheet" href="styles/main.css">
-<!-- endbuild -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title translate="APP_TITLE"></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!-- build:css(.) styles/vendor.css -->
+    <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <!-- endbower -->
+    <!-- endbuild -->
+    <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild -->
 </head>
 <body ng-app="ersApp">
-	<!--[if lt IE 7]>
+    <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
-	<!-- Add your site or application content here -->
-	<div class="container">
-		<div class="header">
-			<ul class="nav nav-pills pull-right">
-				<li class="active"><a ng-href="#/">Home</a></li>
-				<li><a ng-href="#/about">About</a></li>
-				<li role="presentation" class="dropdown"><a
-					class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);"
-					role="button" aria-expanded="false"> CRM <span
-						class="caret"></span>
-				</a>
-					<ul class="dropdown-menu" role="menu">
-						<li><a ng-href="#/customer" translate="NAV_CUSTOMER"></a></li>
-						<li><a ng-href="#/contact" translate="NAV_CONTACT"></a></li>
-					</ul></li>
-				<li><a ng-href="#/">Contact</a></li>
-			</ul>
-			<h3 class="text-muted">ers</h3>
-		</div>
-
-		<div ng-view></div>
-
-		<div class="footer">
-			<p>
-				<span class="glyphicon glyphicon-heart"></span> from the Yeoman team
-			</p>
-		</div>
-	</div>
-
-	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-	<script>
-		!function(A, n, g, u, l, a, r) {
-			A.GoogleAnalyticsObject = l, A[l] = A[l] || function() {
-				(A[l].q = A[l].q || []).push(arguments)
-			}, A[l].l = +new Date, a = n.createElement(g), r = n
+    <!-- Add your site or application content here -->
+    <div class="container">
+        <div class="header">
+            <ul class="nav nav-pills pull-right">
+                <li class="active"><a ng-href="#/">Home</a></li>
+                <li><a ng-href="#/about">About</a></li>
+                <li role="presentation" class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);"
+                       role="button" aria-expanded="false">
+                        {{ 'NAV_CRM' | translate }} <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a ng-href="#/customer" translate="NAV_CUSTOMER"></a></li>
+                        <li><a ng-href="#/contact" translate="NAV_CONTACT"></a></li>
+                    </ul>
+                </li>
+            </ul>
+            <h3 class="text-muted">ers</h3>
+        </div>
+        <div ng-view></div>
+        <div class="footer">
+            <p>
+                <span class="glyphicon glyphicon-heart"></span> from the Yeoman team
+            </p>
+        </div>
+    </div>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+    <script>
+        !function (A, n, g, u, l, a, r) {
+            A.GoogleAnalyticsObject = l, A[l] = A[l] || function () {
+                (A[l].q = A[l].q || []).push(arguments)
+            }, A[l].l = +new Date, a = n.createElement(g), r = n
 					.getElementsByTagName(g)[0], a.src = u, r.parentNode
 					.insertBefore(a, r)
-		}(window, document, 'script',
+        }(window, document, 'script',
 				'//www.google-analytics.com/analytics.js', 'ga');
 
-		ga('create', 'UA-XXXXX-X');
-		ga('send', 'pageview');
-	</script>
-
-	<!-- build:js(.) scripts/oldieshim.js -->
-	<!--[if lt IE 9]>
+        ga('create', 'UA-XXXXX-X');
+        ga('send', 'pageview');
+    </script>
+    <!-- build:js(.) scripts/oldieshim.js -->
+    <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.js"></script>
     <![endif]-->
-	<!-- endbuild -->
-
-	<script src="bower_components/requirejs/require.js"
-		data-main="scripts/main.js"></script>
+    <!-- endbuild -->
+    <script src="bower_components/requirejs/require.js"
+            data-main="scripts/main.js"></script>
 </body>
 </html>
